--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-22  Jason Merrill  <jason@redhat.com>
+
+	* c-semantics.c (genrtl_compound_stmt): Only check nesting
+	consistency if this COMPOUND_STMT is scoped.
+
 2002-01-22  Kazu Hirata  <kazu@hxi.com>
 
 	* predict.c: Fix formatting.
