--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-22  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/arm/arm.c (arm_expand_prologue): Replace REG_MAYBE_DEAD
+	note with a USE.
+	(thumb_expand_prologue): Replace REG_MAYBE_DEAD	note with a USE.
+
 2002-01-22  Jason Merrill  <jason@redhat.com>
 
 	* c-semantics.c (genrtl_compound_stmt): Only check nesting
