--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-22  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* parse.y (patch_switch_statement): Fix format specifier.
+
 2002-01-16  Tom Tromey  <tromey@redhat.com>
 
 	More for PR java/5365:
