--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-22  Bob Wilson  <bob.wilson@acm.org>
+
+	* MAINTAINERS (Write After Approval): Add myself.
+
 2002-01-17  H.J. Lu <hjl@gnu.org>
 
 	* Makefile.in (all-fastjar): Also depend on all-libiberty.
