* config.gcc (x86_64-*-netbsd*): New target. * config/i386/netbsd64.h: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49087 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-22  Jason Thorpe  <thorpej@wasabisystems.com>
+
+	* config.gcc (x86_64-*-netbsd*): New target.
+	* config/i386/netbsd64.h: New file.
+
 2002-01-22  Aldy Hernandez  <aldyh@redhat.com>
 
         * regrename.c (kill_value): Fix typo.
