--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -19624,7 +19624,7 @@
 })
 
 (define_insn "*prefetch_sse"
-  [(prefetch (match_operand:SI 0 "address_operand" "")
+  [(prefetch (match_operand:SI 0 "address_operand" "p")
 	     (const_int 0)
 	     (match_operand:SI 1 "const_int_operand" ""))]
   "TARGET_PREFETCH_SSE"
