PR target/5379 	* gcc.dg/20020122-2.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49094 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-22  Janis Johnson  <janis187@us.ibm.com>
+
+	PR target/5379
+	* gcc.dg/20020122-2.c: New test.
+
 2002-01-22  Hans-Peter Nilsson  <hp@axis.com>
 
 	* gcc.dg/20020122-1.c: New test.
