--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-01-22  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	PR java/4972
+	* aclocal.m4 (AM_ICONV): Put linking flags for libiconv
+	in LIBICONV variable.
+	* configure: Regenerated.
+
 2002-01-22  Krister Walfridsson  <cato@df.lth.se>
 
 	* dependence.c (build_def_use): Remove array_idx.
