--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,37 @@
 2002-01-22  Mark Wielaard <mark@klomp.org>
 
+	* java/awt/Adjustable.java java/awt/CheckboxMenuItem.java 
+	java/awt/Choice.java java/awt/Color.java java/awt/Cursor.java 
+	java/awt/Dialog.java java/awt/FileDialog.java 
+	java/awt/Font.java java/awt/FontMetrics.java 
+	java/awt/Image.java java/awt/ImageMediaEntry.java 
+	java/awt/Insets.java java/awt/List.java 
+	java/awt/MediaEntry.java java/awt/MediaTracker.java 
+	java/awt/Menu.java java/awt/MenuBar.java 
+	java/awt/MenuContainer.java java/awt/MenuShortcut.java 
+	java/awt/PaintContext.java java/awt/Panel.java 
+	java/awt/PopupMenu.java java/awt/SystemColor.java 
+	java/awt/peer/ButtonPeer.java java/awt/peer/CanvasPeer.java 
+	java/awt/peer/CheckboxMenuItemPeer.java 
+	java/awt/peer/CheckboxPeer.java java/awt/peer/ChoicePeer.java 
+	java/awt/peer/ComponentPeer.java 
+	java/awt/peer/ContainerPeer.java java/awt/peer/DialogPeer.java 
+	java/awt/peer/FileDialogPeer.java java/awt/peer/FontPeer.java 
+	java/awt/peer/FramePeer.java java/awt/peer/LabelPeer.java 
+	java/awt/peer/LightweightPeer.java java/awt/peer/ListPeer.java 
+	java/awt/peer/MenuBarPeer.java 
+	java/awt/peer/MenuComponentPeer.java 
+	java/awt/peer/MenuItemPeer.java java/awt/peer/MenuPeer.java 
+	java/awt/peer/PanelPeer.java java/awt/peer/PopupMenuPeer.java 
+	java/awt/peer/ScrollPanePeer.java 
+	java/awt/peer/ScrollbarPeer.java 
+	java/awt/peer/TextAreaPeer.java 
+	java/awt/peer/TextComponentPeer.java 
+	java/awt/peer/TextFieldPeer.java
+	java/awt/peer/WindowPeer.java: Add license clarification.
+
+2002-01-22  Mark Wielaard <mark@klomp.org>
+
 	* LIBGCJ_LICENSE gnu/classpath/Configuration.java.in 
 	gnu/gcj/runtime/StringBuffer.java 
 	gnu/java/awt/BitMaskExtent.java gnu/java/awt/Buffers.java 
