* java/awt/GridBagConstraints.java: Updated copyright.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49109 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-22  Tom Tromey  <tromey@redhat.com>
+
+	* java/awt/GridBagConstraints.java: Updated copyright.
+
 2002-01-22  Mark Wielaard <mark@klomp.org>
 
 	* java/awt/Adjustable.java java/awt/CheckboxMenuItem.java 
