--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-22  Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/20020122-4.c: New.
+
 2002-01-22  H.J. Lu <hjl@gnu.org>
 
 	* g++.dg/special/ecos.exp: Append .exe instead of a.out as the
