* combine.c (simplify_and_const_int): Don't trunc_int_for_mode 	"nonzero" as that might add "1" bits.  Ensure "constop" is 	properly sign extened. 	(force_to_mode): Tweak for sign extended constop.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49112 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-01-23  Alan Modra  <amodra@bigpond.net.au>
+
+	* combine.c (simplify_and_const_int): Don't trunc_int_for_mode
+	"nonzero" as that might add "1" bits.  Ensure "constop" is
+	properly sign extened.
+	(force_to_mode): Tweak for sign extended constop.
+
 2002-01-22  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.c (some_small_symbolic_mem_operand) Use
