* java/awt/TextField.java: Replaced with Classpath version. 	* java/awt/TextArea.java: Replaced with Classpath version. 	* java/awt/TextComponent.java: Replaced with Classpath version.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49113 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-22  Tom Tromey  <tromey@redhat.com>
 
+	* java/awt/TextField.java: Replaced with Classpath version.
+	* java/awt/TextArea.java: Replaced with Classpath version.
+	* java/awt/TextComponent.java: Replaced with Classpath version.
+
 	* java/awt/GridBagConstraints.java: Updated copyright.
 
 2002-01-22  Mark Wielaard <mark@klomp.org>
