--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-22  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.c (split_small_symbolic_mem_operand): Use
+	copy_insn not copy_rtx.
+
 2002-01-23  Alan Modra  <amodra@bigpond.net.au>
 
 	* combine.c (simplify_and_const_int): Don't trunc_int_for_mode
