--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-22  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/i386/freebsd-aout.h (ASM_QUAD): Undefine.
+
 2002-01-22  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.c (split_small_symbolic_mem_operand): Use
