* config/netbsd-aout.h (SWITCH_TAKES_ARG): Remove bogus white space after backslash. (ASM_DECLARE_OBJECT_NAME): Add missing backslash before final line.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49117 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-22  Richard Earnshaw  <rearnsha@arm.com>
+
+	* config/netbsd-aout.h (SWITCH_TAKES_ARG): Remove bogus white space
+	after backslash.
+	(ASM_DECLARE_OBJECT_NAME): Add missing backslash before final line.
+
 2002-01-22  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/i386/freebsd-aout.h (ASM_QUAD): Undefine.
