2002-01-22  Aldy Hernandez  <aldyh@redhat.com>
        * extend.texi: Document altivec functions.
        Fix *-bit adjectives in X86 builtin documentation.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49120 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-22  Aldy Hernandez  <aldyh@redhat.com>
+
+        * extend.texi: Document altivec functions.
+        Fix N-bit adjectives in X86 builtin documentation.
+
 2002-01-22  Alexandre Oliva  <aoliva@redhat.com>
 
 	* reload.c (reg_overlap_mentioned_for_reload_p): Handle PLUS and
