* exgettext: Merge changes from diffutils.  Scan .def files in 	addition to .c and .h.  Add --language=c to xgettext command line.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49121 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-22  Zack Weinberg  <zack@codesourcery.com>
+
+	* exgettext: Merge changes from diffutils.  Scan .def files in
+	addition to .c and .h.  Add --language=c to xgettext command line.
+
 2001-12-05  Martin v. Löwis  <loewis@informatik.hu-berlin.de>
 
 	* es.po: Update to 3.0 template.
