--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-23  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	PR c/3504
+	* doc/extend.texi: Correct documentation of __alignof__.
+
 2002-01-22  Zack Weinberg  <zack@codesourcery.com>
 
 	* params.h: Rename arguments of DEFPARAM so that it will be
