Use an UNSPEC instead of a USE to prevent prologue/epilogue insns from being deleted.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49130 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2002-01-23  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/arm/arm.md (UNSPEC_PROLOGUE_USE): New unspec constant.
+	(prologue_use): New pattern.
+	* config/arm/arm.c (expand_prologue): Use gen_prologue_use in
+	preference to gen_rtx_USE.
+	(thumb_expand_prologue): Use gen_prologue_use in preference to
+	gen_rtx_USE.
+	(thumb_expand_epilogue): Use gen_prologue_use in preference to
+	gen_rtx_USE.
+
 2002-01-23  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* loop.c [!HAVE_prefetch] (CODE_FOR_prefetch): Define to 0.
