* function.c (assign_parms): Don't put args of inline functions         into registers when not optimizing.         * cp/decl2.c (grokclassfn): Don't set DECL_REGISTER on 'this'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49131 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-22  Jason Merrill  <jason@redhat.com>
 
+	* decl2.c (grokclassfn): Don't set DECL_REGISTER on 'this'.
+
 	* parse.y (function_body): Suppress the block for the outermost
 	curly braces.
 	* decl.c (pushdecl): Don't try to skip it.
