--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-23  Jason Merrill  <jason@redhat.com>
+
+	* function.c (assign_parms): Don't put args of inline functions
+	into registers when not optimizing.
+
 2002-01-23  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* config/arm/arm.md (UNSPEC_PROLOGUE_USE): New unspec constant.
