* tree.c (build1): Don't set TREE_READONLY on INDIRECT_REF.         PR c++/3331         * cp/init.c (resolve_offset_ref): Use build_indirect_ref.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49132 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-23  Jason Merrill  <jason@redhat.com>
 
+	* tree.c (build1): Don't set TREE_READONLY on INDIRECT_REF.
+
 	* function.c (assign_parms): Don't put args of inline functions
 	into registers when not optimizing.
 
