--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-23  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.md (*andorhi3): Accept 0x8000 as an
+	operand[3].
+
 2002-01-23  Jason Merrill  <jason@redhat.com>
 
 	* tree.c (build1): Don't set TREE_READONLY on INDIRECT_REF.
