--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-23  Will Cohen  <wcohen@redhat.com>
+
+	* config/arm/arm.h (THUMB_FUNCTION_PROFILER): Define if not currently
+	defined.
+
 2002-01-23  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.md (*andorhi3): Accept 0x8000 as an
