--- a/gcc/doc/rtl.texi
+++ b/gcc/doc/rtl.texi
@@ -57,9 +57,9 @@ expression (``RTX'', for short) is a C structure, but it is usually
 referred to with a pointer; a type that is given the typedef name
 @code{rtx}.
 
-An integer is simply an @code{int}; their written form uses decimal digits.
-A wide integer is an integral object whose type is @code{HOST_WIDE_INT}
-(@pxref{Config}); their written form uses decimal digits.
+An integer is simply an @code{int}; their written form uses decimal
+digits.  A wide integer is an integral object whose type is
+@code{HOST_WIDE_INT}; their written form uses decimal digits.
 
 A string is a sequence of characters.  In core it is represented as a
 @code{char *} in usual C fashion, and it is written in C syntax as well.
