--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-23  Zack Weinberg  <zack@codesourcery.com>
+
+	* gcc.dg/c99-intconst-1.c: Mark XFAIL.
+
 2002-01-22  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/20020122-4.c: New.
