--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-23  Philipp Thomas  <pthomas@suse.de>
+
+	* tr.po: New file.
+
 2002-01-22  Zack Weinberg  <zack@codesourcery.com>
 
 	* gcc.pot: Regenerate - now includes Fortran error messages.
