* gcc.dg/20020122-3.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49148 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-23  Janis Johnson  <janis187@us.ibm.com>
+
+	* gcc.dg/20020122-3.c: New.
+
 2002-01-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/other/gc1.C: New test.
