2002-01-23  Craig Rodrigues  <rodrigc@gcc.gnu.org>
        * cp-tree.h (my_friendly_abort): Remove.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49149 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-23  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	* cp-tree.h (my_friendly_abort): Remove.
+
 2002-01-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* spew.c (pending_inlines, pending_inlines_tail,
