* diagnostic.c (internal_error): Do ICE suppression only 	when ENABLE_CHECKING is not defined.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49151 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-01-23  Zack Weinberg  <zack@codesourcery.com>
 
+	* diagnostic.c (internal_error): Do ICE suppression only
+	when ENABLE_CHECKING is not defined.
+
 	* c-typeck.c (require_complete_type): Return error_mark_node
 	if type is error_mark_node.
 
