* config/xtensa/elf.h: New file.         * config/xtensa/lib1funcs.asm: New file.         * config/xtensa/lib2funcs.S: New file.         * config/xtensa/linux.h: New file.         * config/xtensa/t-xtensa: New file.         * config/xtensa/xtensa-config.h: New file.         * config/xtensa/xtensa-protos.h: New file.         * config/xtensa/xtensa.c: New file.         * config/xtensa/xtensa.h: New file.         * config/xtensa/xtensa.md: New file.         * config.gcc (xtensa-*-elf*): New target.         (xtensa-*-linux*): New target.         * cse.c (canon_hash): Compare rtx pointers instead of register         numbers.  This is required for the Xtensa port.         * integrate.c (copy_insn_list): Handle case where the static         chain is in memory and the memory address has to be copied to         a register.         * doc/invoke.texi (Option Summary): Add Xtensa options.         (Xtensa Options): New node.         * doc/md.texi (Machine Constraints): Add Xtensa machine constraints.         * gcc.c-torture/compile/20001226-1.x: xfail for Xtensa.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49155 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,26 @@
+2002-01-23  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/xtensa/elf.h: New file.
+	* config/xtensa/lib1funcs.asm: New file.
+	* config/xtensa/lib2funcs.S: New file.
+	* config/xtensa/linux.h: New file.
+	* config/xtensa/t-xtensa: New file.
+	* config/xtensa/xtensa-config.h: New file.
+	* config/xtensa/xtensa-protos.h: New file.
+	* config/xtensa/xtensa.c: New file.
+	* config/xtensa/xtensa.h: New file.
+	* config/xtensa/xtensa.md: New file.
+	* config.gcc (xtensa-*-elf*): New target.
+	(xtensa-*-linux*): New target.
+	* cse.c (canon_hash): Compare rtx pointers instead of register
+	numbers.  This is required for the Xtensa port.
+	* integrate.c (copy_insn_list): Handle case where the static
+	chain is in memory and the memory address has to be copied to
+	a register.
+	* doc/invoke.texi (Option Summary): Add Xtensa options.
+	(Xtensa Options): New node.
+	* doc/md.texi (Machine Constraints): Add Xtensa machine constraints.
+
 2002-01-23  Zack Weinberg  <zack@codesourcery.com>
 
 	* diagnostic.c (internal_error): Do ICE suppression only
