--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-23  Richard Henderson  <rth@redhat.com>
+
+	* expr.c (move_by_pieces_1): Extend size before negation.
+
 2002-01-23  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/elf.h: New file.
