--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-23  Aldy Hernandez  <aldyh@redhat.com>
+
+        * c-parse.in (parmlist_or_identifiers): Add maybe_attribute.
+        (parmlist_or_identifiers_1): Verify that only a parmlist follows
+        an attribute.
+
 2002-01-23  Richard Henderson  <rth@redhat.com>
 
 	* expr.c (move_by_pieces_1): Extend size before negation.
