--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-23  Aldy Hernandez  <aldyh@redhat.com>
+
+        * gcc.dg/20020115-1.c: New.
+
 2002-01-23  Bob Wilson  <bob.wilson@acm.org>
 
 	* gcc.c-torture/compile/20001226-1.x: xfail for Xtensa.
